# poker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  backup.sql  docker-compose.yaml  local_run.yaml  pg_dump.sql
api/: Cargo.toml
api/css/: about_us.css  admin_panel.css  file_upload.css  game.css  kontakt.css  leaderboard.css  login.css  nav.css  poker_dump.sql  post.css  posts.css
api/migrations/2024-01-18-200317_create_posts/: down.sql  up.sql
api/migrations/2024-01-24-181403_logs/: up.sql
api/src/: main.rs  models.rs  schema.rs
api/src/db/: admin.rs  connect.rs  game.rs  list_admins.rs  list_players.rs  logs.rs  mod.rs  player.rs
api/src/services/: game.rs  log.rs  mod.rs  player.rs  root.rs
frontend/: Cargo.toml  Trunk.toml  change_url.sh  index.html
frontend/src/: app.rs  main.rs  router.rs
frontend/src/api/: add_player.rs  add_user.rs  auth.rs  change_password.rs  change_player.rs  delete_user.rs  game.rs  list_players.rs  logs.rs  mod.rs  response.rs
frontend/src/components/: admin.rs  admin_panel.rs  list_points.rs  login.rs  mod.rs
frontend/src/components/game/: game.rs  main.rs
frontend/src/components/root/: add_user.rs  change_password.rs  delete_user.rs  mod.rs  root_panel.rs
html/: index.css  index.html
html/leaderboard/: index.css  index.html
