[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
reqwest = "0.11.22"
actix-rt = "2.9.0"
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
actix-cors = "0.6.4"
serde_json = "1.0.108"
rust-argon2 = "2.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
actix-files = "0.6.5"
actix-web-lab = { version = "0.20.1", features = ["spa"] }
