[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen = { version = "0.2.87", features = ["serde_json", "serde", "serde-serialize"] }
web-sys = { version = "0.3.65", features = ["DragEvent", "DataTransfer", "IntersectionObserver", "IntersectionObserverEntry"] }
yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
gloo-net = "0.2"
yewdux = "0.10.0"
gloo-console = "0.3.0"
